cmake_minimum_required(VERSION 3.21)
project(cpp_problems)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_problems main.cpp cracking_the_coding_interview/examples/pairSumSequence.h homemade/ArrayList.h homemade/ArrayList.cpp homemade/Stack.h homemade/Stack.cpp homemade/Queue.cpp homemade/Queue.h homemade/LinkedList.cpp homemade/LinkedList.h)
